[gd_scene load_steps=7 format=3 uid="uid://cn0p0o8giw1sd"]

[ext_resource type="PackedScene" uid="uid://dd5wl3rf5exwl" path="res://2d/source/scenes/scene_header.tscn" id="1"]
[ext_resource type="Theme" uid="uid://c6r0evvw6xarl" path="res://2d/assets/themes/transparent_borders.tres" id="2"]
[ext_resource type="AudioStream" uid="uid://djsp5hrtwv4sd" path="res://audio/sound/teleport.ogg" id="3"]
[ext_resource type="PackedScene" uid="uid://bm5tpl0ppabiw" path="res://2d/source/scenes/difficulty_level.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://cnpb6y06urx4t" path="res://2d/assets/images/title_background.jpg" id="6"]
[ext_resource type="Script" path="res://2d/source/scripts/settings/system.gd" id="7"]

[node name="Node2D" type="Node2D" groups=["settings_system"]]
script = ExtResource("7")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(512, 300)
texture = ExtResource("6")

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3")

[node name="AmbientWind" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="AmbientWater" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="Container" type="ScrollContainer" parent="."]
offset_left = 16.0
offset_top = 135.0
offset_right = 1008.0
offset_bottom = 585.0
theme = ExtResource("2")
follow_focus = true

[node name="Grid" type="GridContainer" parent="Container"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_constants/v_separation = 15
columns = 2

[node name="Music" type="CheckButton" parent="Container/Grid"]
custom_minimum_size = Vector2(355, 0)
layout_mode = 2
button_pressed = true
text = "Music"

[node name="Label1" type="Label" parent="Container/Grid"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
text = "Enable music globally."

[node name="Sound" type="CheckButton" parent="Container/Grid"]
layout_mode = 2
button_pressed = true
text = "Sound"

[node name="Label3" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "Enable Sound globally."

[node name="Ambient" type="CheckButton" parent="Container/Grid"]
layout_mode = 2
button_pressed = true
text = "Ambient"

[node name="Label4" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "Enable wind and water drop sounds."

[node name="Randomize2dMaze" type="CheckButton" parent="Container/Grid"]
layout_mode = 2
button_pressed = true
text = "Random 2D Mazes"

[node name="Label6" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "Use a random seed to generate the 2D dungeon?"

[node name="GridChild" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2
alignment = 2

[node name="GameSeedLabel" type="Label" parent="Container/Grid/GridChild"]
layout_mode = 2
text = " Game Seed "

[node name="GameSeedSpinbox" type="SpinBox" parent="Container/Grid/GridChild"]
process_mode = 3
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 2
mouse_filter = 1
max_value = 1e+09

[node name="Label7" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "Dungeons will be procedurally generated using this seed"

[node name="GridChild3" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2
alignment = 2

[node name="PlayerStatsPanelSize" type="Label" parent="Container/Grid/GridChild3"]
layout_mode = 2
text = "	Player Stats Panel Size"

[node name="PlayerStatsPanelSizeSpinbox" type="SpinBox" parent="Container/Grid/GridChild3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 2
mouse_filter = 1
max_value = 3.0

[node name="Label8" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "The size of the player stats panel. 0:Magic panel and Inventory panel shown. 1:Magic panel hidden. 2:Inventory panel hidden. 3:Both magic panel and inventory panel are hidden."

[node name="MiniClient" type="CheckButton" parent="Container/Grid"]
layout_mode = 2
button_pressed = true
text = "Mini Client"

[node name="Label10" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "Show more of the main map by showing less of the client panel."

[node name="HideChatFeatures" type="CheckButton" parent="Container/Grid"]
layout_mode = 2
text = "Hide Chat Features"

[node name="Label11" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "Show the connect to server buttom, public room buttom and the private room button at the client panel?"

[node name="RuneGuides" type="CheckButton" parent="Container/Grid"]
layout_mode = 2
theme = ExtResource("2")
button_pressed = true
text = "Rune Guides"

[node name="Label12" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "Show guide images on map where a rune can be casted."

[node name="AutomaticRuneCasting" type="CheckButton" parent="Container/Grid"]
layout_mode = 2
theme = ExtResource("2")
text = "Automatic Rune Casting"

[node name="Label15" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "Off: Cast the rune at the main map. On: Instant rune casting"

[node name="HideStoneWalls" type="CheckButton" parent="Container/Grid"]
layout_mode = 2
theme = ExtResource("2")
text = "Hide Stone Walls"

[node name="Label19" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "Hide the dungeon corridor stone walls?"

[node name="RemoveExtraStoneWalls" type="CheckButton" parent="Container/Grid"]
layout_mode = 2
theme = ExtResource("2")
button_pressed = true
text = "Remove Extra Stone Walls"

[node name="Label20" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "Try to show only the stone walls that parameter the corridor?"

[node name="RemoveLevelBorder" type="CheckButton" parent="Container/Grid"]
layout_mode = 2
theme = ExtResource("2")
text = "Remove Level Border"

[node name="Label21" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "Remove every one tile wide Stone tile that borders the level."

[node name="UseLargeTiles" type="CheckButton" parent="Container/Grid"]
layout_mode = 2
theme = ExtResource("2")
button_pressed = true
text = "Use Large Tiles"

[node name="Label22" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "Should the graphics at the dungeon map be displayed larger?"

[node name="GridChild2" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2
alignment = 2

[node name="CorridorLengthBetweenRooms" type="Label" parent="Container/Grid/GridChild2"]
layout_mode = 2
theme = ExtResource("2")
text = "Corridor Length"

[node name="CorridorLengthSpinBox" type="SpinBox" parent="Container/Grid/GridChild2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 2
min_value = 3.0
max_value = 12.0
value = 6.0

[node name="Label24" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "Higher value can increase the corridor distance between rooms."

[node name="DifficultyLevel" parent="." instance=ExtResource("5")]

[node name="SceneHeader" parent="." instance=ExtResource("1")]

[node name="Label" parent="SceneHeader" index="2"]
offset_left = 8.0
offset_right = 1032.0
text = ""

[connection signal="tree_exiting" from="." to="." method="_on_Node2D_tree_exiting"]
[connection signal="toggled" from="Container/Grid/Music" to="." method="_on_MusicEnabled_toggled"]
[connection signal="toggled" from="Container/Grid/Sound" to="." method="_on_Sound_toggled"]
[connection signal="toggled" from="Container/Grid/Ambient" to="." method="_on_Ambient_toggled"]
[connection signal="toggled" from="Container/Grid/Randomize2dMaze" to="." method="_on_randomize_2d_maze_Enabled_toggled"]
[connection signal="value_changed" from="Container/Grid/GridChild/GameSeedSpinbox" to="." method="_on_GameSeedSpinbox_value_changed"]
[connection signal="value_changed" from="Container/Grid/GridChild3/PlayerStatsPanelSizeSpinbox" to="." method="_on_player_stats_panel_size_Spinbox_value_changed"]
[connection signal="toggled" from="Container/Grid/MiniClient" to="." method="_on_mini_client_Enabled_toggled"]
[connection signal="toggled" from="Container/Grid/HideChatFeatures" to="." method="_on_hide_chat_features_Enabled_toggled"]
[connection signal="toggled" from="Container/Grid/RuneGuides" to="." method="_on_rune_guides_Enabled_toggled"]
[connection signal="toggled" from="Container/Grid/AutomaticRuneCasting" to="." method="_on_automatic_rune_casting_Enabled_toggled"]
[connection signal="toggled" from="Container/Grid/HideStoneWalls" to="." method="_on_hide_stone_walls_Enabled_toggled"]
[connection signal="toggled" from="Container/Grid/RemoveExtraStoneWalls" to="." method="_on_remove_extra_stone_walls_Enabled_toggled"]
[connection signal="toggled" from="Container/Grid/RemoveLevelBorder" to="." method="_on_remove_level_border_Enabled_toggled"]
[connection signal="toggled" from="Container/Grid/UseLargeTiles" to="." method="_on_use_large_tiles_Enabled_toggled"]
[connection signal="value_changed" from="Container/Grid/GridChild2/CorridorLengthSpinBox" to="." method="_on_corridor_length_between_rooms_SpinBox_value_changed"]

[editable path="SceneHeader"]
